Fix columns spacing

--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -5866,6 +5866,8 @@ label.panel-block:hover {
 }
 
 .columns {
+  margin-left: -0.75rem;
+  margin-right: -0.75rem;
   margin-top: -0.75rem;
 }
 
@@ -5921,8 +5923,6 @@ label.panel-block:hover {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-left: -0.75rem;
-  margin-right: -0.75rem;
 }
 
 .columns.is-multiline {
@@ -5941,8 +5941,6 @@ label.panel-block:hover {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    margin-left: -0.75rem;
-    margin-right: -0.75rem;
   }
 }
 
@@ -5951,8 +5949,6 @@ label.panel-block:hover {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    margin-left: -0.75rem;
-    margin-right: -0.75rem;
   }
 }
 
