--- a/sass/grid/columns.sass
+++ b/sass/grid/columns.sass
@@ -204,6 +204,8 @@
         margin-left: ($i / 12) * 100%
 
 .columns
+  margin-left: -0.75rem
+  margin-right: -0.75rem
   margin-top: -0.75rem
   &:last-child
     margin-bottom: -0.75rem
@@ -235,8 +237,6 @@
           margin-left: 0
   &.is-mobile
     display: flex
-    margin-left: -0.75rem
-    margin-right: -0.75rem
   &.is-multiline
     flex-wrap: wrap
   &.is-vcentered
@@ -245,11 +245,7 @@
   +tablet
     &:not(.is-desktop)
       display: flex
-      margin-left: -0.75rem
-      margin-right: -0.75rem
   +desktop
     // Modifiers
     &.is-desktop
       display: flex
-      margin-left: -0.75rem
-      margin-right: -0.75rem
